Aplicar fuente Footlight MT Light al título

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Footlight MT Light';
+  src: url('./assets/fonts/FootlightMTLight.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.titulo-principal {
+  font-family: "Footlight MT Light", serif;
+  font-weight: normal;
+}
